--- a/site_institucional/index.html
+++ b/site_institucional/index.html
@@ -26,6 +26,44 @@
         </div>
     </div>
 
+    <!--BANNER-->
+    <div class="banner">
+        <div class="container">
+
+            <p>Preservando <b>hoje</b> para existirem <b>amanhã</b></p>
+
+        </div>
+    </div>
+
+    <!--SOCIAL-->
+    <div class="social">
+
+        <div class="container">
+
+            <div class="caixas">
+
+                <div class="caixa">
+
+                    <img src="./assets/img/planet-earth_color.png" alt="Imagem sobre nossa Missão">
+                    <h4>Missão</h4>
+                    <p>Construir o melhor site instituicional do Brasil</p>
+                </div>
+                <div class="caixa">
+
+                    <img src="./assets/img/lightbulb_color.png" alt="Imagem sobre nossa Visão">
+                    <h4>Visão</h4>
+                    <p>Trazer a melhor experiência para o usuário em toda a sua navegação do site</p>
+                </div>
+                <div class="caixa">
+
+                    <img src="./assets/img/growth_color.png" alt="Imagem sobre nossa Valores">
+                    <h4>Valores</h4>
+                    <p>Resiliência, Foco, Ética, Disciplina, Empatia, Coragem, Amor e Transparencia</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
