--- a/site_institucional/index.html
+++ b/site_institucional/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="header">
+    <header>
         <div class="container">
             <h1>AQUATEC</h1>
 
@@ -19,12 +19,12 @@
                     <li>Home</li>
                     <li>Sobre Nós</li>
                     <li>|</li>
-                    <li>Login</li>
+                    <li><a href="login.html"> Login </a></li>
                     <li>Cadastro</li>
                 </ul>
             </div>
         </div>
-    </div>
+    </header>
 
     <!--BANNER-->
     <div class="banner">
@@ -63,6 +63,13 @@
             </div>
         </div>
     </div>
+    <!-- FOOTER -->
+
+    <footer>
+        <div class="container">
+            <p>Desenvolvido pelo melhor SPTecher - &copy; Copyright</p>
+        </div>
+    </footer>
 
 </body>
 
